description = "Exposes data from DB via REST API"

apply plugin: 'groovy'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

version = '0.0.1'

sourceCompatibility = 11
targetCompatibility = 11

test {
    useJUnitPlatform()
    jvmArgs '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED' //TODO Cassandra 4 - Remove when no longer needed
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok:1.18.18'
    compileOnly 'org.projectlombok:lombok:1.18.18'

    implementation 'org.springframework.boot:spring-boot-starter-web:2.4.2'
    implementation 'org.springframework.data:spring-data-cassandra:3.1.3'

    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.4.2'
    testImplementation 'org.spockframework:spock-spring:2.0-M2-groovy-2.5'
    testImplementation 'org.cassandraunit:cassandra-unit-spring:4.3.1.0'
    testImplementation 'org.apache.cassandra:cassandra-all:4.0-beta4'            //TODO Cassandra 4 - Remove when version 4 included in cassandra-unit-spring
    testImplementation 'org.hibernate.validator:hibernate-validator:6.1.5.Final' //TODO Cassandra 4 - Remove when working version inherited frm cassandra-unit-spring
}
